launchpad-buildd (115) UNRELEASED; urgency=low

  * Short the readlink call in scan-for-process with a true to avoid
    prematurely exiting the process scan when tripping over zombies.

 -- Adam Conrad <adconrad@ubuntu.com>  Mon, 29 Apr 2013 15:47:20 -0600

launchpad-buildd (114) hardy; urgency=low

  * Don't use the uname-2.6 hack when building on quantal and newer.
  * Display the linux32-faked kernel version before calling sbuild.

 -- Adam Conrad <adconrad@ubuntu.com>  Tue, 24 Apr 2012 07:44:18 -0600

launchpad-buildd (113) hardy; urgency=low

  * Shut up umount-chroot's verbose output, it served its purpose.
  * Yank out sbuild's dependency removal code, as we never once
    checked the return from this anyway, so it's just wasted time.
  * Stop writing to avg-space and avg-time, which we don't use.

 -- Adam Conrad <adconrad@ubuntu.com>  Thu, 22 Mar 2012 04:01:48 -0600

launchpad-buildd (112) hardy; urgency=low

  [ Jelmer Vernooij ]
  * Prevent slave from blowing up when it is aborted before a job has
    started. LP: #497772

  [ Adam Conrad ]
  * Update sbuild-package and update-debian-chroot to use linux32/64
    universally, and to pass --uname-2.6 when available, so we can
    use 3.x.x kernels to build older releases on the buildds.
  * Fix sbuild-package to report the correct number of cores/jobs.
  * Make sure /usr/bin/check-implicit-pointer-functions is called for
    all 64-bit builds on lucid and above, this logic got broken.

 -- Adam Conrad <adconrad@ubuntu.com>  Wed, 25 Jan 2012 11:27:55 -0700

launchpad-buildd (111) hardy; urgency=low

  * Add preppath to buildd-slave-test.conf, to unbreak the LP test suite.

 -- William Grant <wgrant@ubuntu.com>  Fri, 09 Dec 2011 08:58:17 +1100

launchpad-buildd (110) hardy; urgency=low

  [ Jelmer Vernooij ]
  * Use the actual target distroseries name in changelog, rather than
    the same as the last entry. LP: #855479
  * Use os.SEEK_END constant now that all build slaves run at least