@@ -2,6 +2,8 @@ launchpad-buildd (115) UNRELEASED; urgency=low
 
   * Short the readlink call in scan-for-process with a true to avoid
     prematurely exiting the process scan when tripping over zombies.
+  * Write to temporary cache files and then rename after validation
+    to avoid the cache containing broken aborted files (LP: #471076)
 
  -- Adam Conrad <adconrad@ubuntu.com>  Mon, 29 Apr 2013 15:47:20 -0600
 
